라이브러리 추가   - 이메일, 시큐리티 xml 추가 및 수정   - spring-security.xml 추가   - spring-security.xml 에 web.xml에 추가 회원가입 폼 수정   - css 수정, jsp 수정

--- a/cocain/src/main/webapp/WEB-INF/web.xml
+++ b/cocain/src/main/webapp/WEB-INF/web.xml
@@ -38,6 +38,7 @@
 			<param-value>
 				classpath:config/spring/servlet-context.xml
 				classpath:config/spring/repository-context.xml
+				classpath:config/spring/spring-security.xml
 			</param-value>
 <!-- 			 context파일을 여러개 읽을 때...
      		<param-value>classpath:config/spring/*context.xml</param-value> -->
